syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.maxdemarzi";
option java_outer_classname = "Neo4jGRPCProto";

service Neo4jQuery {
    rpc ExecuteQuery (CypherQueryString) returns (stream CypherQueryResult) {
    }
}

message CypherQueryString {
    string query = 1;
}

message CypherQueryResult {
    string result = 1;
}